tests/ui_fail/conflicting_inherent_items.stderr
error[E0592]: duplicate definitions with name `kita`
  --> tests/ui_fail/conflicting_inherent_items.rs:19:1
   |
19 | / disjoint_impls! {
20 | |     impl<T: Dispatch<Group = GroupA>> Wrapper<T> {
21 | |         fn kita() -> &'static str {
22 | |             "Blanket A"
...  |
30 | | }
   | | ^
   | | |
   | |_duplicate definitions for `kita`
   |   other definition for `kita`
   |
   = note: this error originates in the macro `disjoint_impls` (in Nightly builds, run with -Z macro-backtrace for more info)
